# scrcpy-gui

./: .cursorrules  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  qml.qrc  release.ps1  resources.qrc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  config.example.json
qml/: AppListPanel.qml  LogPanel.qml  SettingsDialog.qml  main.qml
src/: applistmodel.cpp  applistmodel.h  appmanager.cpp  appmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  scrcpywindow.cpp  scrcpywindow.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h
ui/: mainwindow.ui
